--- a/part2/views/event/new.ejs
+++ b/part2/views/event/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<!-- Main -->
+    <!-- Main -->
     <main class="container lg:max-w-4xl h-full mx-auto">
       <!-- Text Header -->
       <div class="flex justify-center my-12">
@@ -8,11 +8,11 @@
       </div>
       
       <div class="flex justify-center bg-sky-200 h-full mt-8 mb-32 border-y sm:border border-slate-900 shadow-xl sm:rounded-3xl">
-        <form class="grid gap-y-6 grid-rows-8 px-3 md:px-16 md:w-full" action="#">
+        <form class="grid gap-y-6 grid-rows-8 px-3 md:px-16 md:w-full" action='/events' method = 'POST'>
           <!-- Category -->
-          <div class="mt-5 bg-slate-200 rounded-lg p-3">
+          <div class="mt-5 bg-slate-200 rounded-lg p-5 border border-slate-300 shadow">
             <label for="category" class="serif">Category</label>
-            <select name="category" id="category" class="w-full serif text-slate-700 bg-slate-50" required>
+            <select name="category" id="category" class="w-full serif text-slate-400 bg-white border border-slate-400 p-1 mt-1" required>
               <option value="" hidden>Select category</option>
               <option>Interest Meeting</option>
               <option>Trade is War</option>
@@ -23,36 +23,36 @@
           </div>
 
           <!-- Title -->
-          <div class="bg-slate-200 rounded-lg p-3">
+          <div class="bg-slate-200 rounded-lg p-5 border border-slate-300 shadow">
             <label for="title" class="serif">Title</label>
-            <input type="text" name="title" id="title" placeholder="Enter title" class="w-full serif text-slate-700" required>
+            <input type="text" name="title" id="title" placeholder="Enter title" class="w-full serif text-slate-700 border border-slate-400 p-1 mt-1" required>
           </div>
 
           <!-- Description -->
-          <div class="bg-slate-200 rounded-lg p-3">
+          <div class="bg-slate-200 rounded-lg p-5 border border-slate-300 shadow">
             <label for="description" class="serif">Description</label>
-            <textarea name="description" id="description" placeholder="Enter description" class="w-full serif text-slate-700" required></textarea>
+            <textarea name="description" id="description" placeholder="Enter description" class="w-full serif text-slate-700 border border-slate-400 p-1 mt-1" required></textarea>
           </div>
 
           <!-- Location -->
-          <div class="bg-slate-200 rounded-lg p-3">
+          <div class="bg-slate-200 rounded-lg p-5 border border-slate-300 shadow">
             <label for="location" class="serif">Location</label>
-            <input type="text" name="location" id="location" placeholder="Enter location" class="w-full serif text-slate-700" required>
+            <input type="text" name="location" id="location" placeholder="Enter location" class="w-full serif text-slate-700 border border-slate-400 p-1 mt-1" required>
           </div>
           
 
           <!-- Date -->
-          <div class="bg-slate-200 rounded-lg p-3 flex flex-col">
-            <label for="start" class="serif">Start Time</label>
-            <input type="datetime-local" name="start" id="start" class="w-full serif text-slate-700" required>
-            <label for="end" class="serif pt-5">End Time</label>
-            <input type="datetime-local" name="end" id="end" class="w-full serif text-slate-700" required>
+          <div class="bg-slate-200 rounded-lg p-5 flex flex-col border border-slate-300 shadow">
+            <label for="startTime" class="serif">Start Time</label>
+            <input type="datetime-local" name="startTime" id="startTime" class="w-full serif text-slate-400 border border-slate-400 p-1 mt-1" required>
+            <label for="endTime" class="serif pt-5">End Time</label>
+            <input type="datetime-local" name="endTime" id="endTime" class="w-full serif text-slate-400 border border-slate-400 p-1 mt-1" required>
           </div>
           
           <!-- Image -->
-          <div class="bg-slate-200 rounded-lg p-3">
+          <div class="bg-slate-200 rounded-lg p-5 border border-slate-300 shadow">
             <label for="image" class="serif">Image</label>
-            <input type="file" name="image" id="image" class="w-full serif" required>
+            <input type="file" name="image" id="image" class="w-full text-slate-400 serif py-2" required>
           </div>
 
           <!-- Submit -->
