--- a/part2/views/event/show.ejs
+++ b/part2/views/event/show.ejs
@@ -1,30 +1,47 @@
 <%- include('../partials/header.ejs') %>
 
-
     <!-- Main -->
-    <main class="container lg:max-w-5xl flex items-center grow flex-col md:flex-row mx-auto my-32 md:mt-12 md:mb-24 md:px-4">
-      <div class="flex flex-col justify-center w-full bg-slate-200 border-y md:border border-slate-900 sm:rounded-3xl p-4 md:p-12 shadow-xl">
-        <!-- Event Header -->
-        <div class="flex items-center justify-center">
-          <div class="grow text-center">
-            <strong class="text-3xl">Trade is War - Part 1 Meeting</strong>
+    <main class="container lg:max-w-7xl flex items-center grow flex-col md:flex-row mx-auto my-32 md:mt-12 md:mb-24 md:px-4">
+      <!-- Event Container --> 
+      <div class="flex flex-col justify-center w-full bg-sky-200 border-y md:border border-slate-900 sm:rounded-3xl py-5 md:p-12 shadow-xl">
+        <div class="bg-white pt-8 md:p-8 md:rounded-xl">
+          <!-- Event Header -->
+          <div class="flex items-center justify-center">
+            <!-- Event Title -->
+            <div class="grow text-center">
+              <strong class="text-3xl"><%= event.title %></strong>
+            </div>
+
+            <!-- Edit/Delete -->
+            <form class="mx-5 md:m-0 w-5">
+              <!-- Edit -->
+              <button type="submit" formmethod = "GET" formaction="/events/<%= event.id %>/edit">
+                <i class="fa-regular fa-pen-to-square text-green-500 hover:text-green-900 md:pr-3"></i>
+              </button>
+
+              <!-- Delete -->
+              <button type="submit" formmethod = "POST" formaction="/events/<%= event.id %>/?_method=DELETE">
+                <i class="fa-solid fa-trash text-red-500 hover:text-red-900"></i>
+              </button>
+            </form>
           </div>
-          <div class="ml-4 md:ml-0">
-            <i class="fa-regular fa-pen-to-square text-green-500 hover:text-green-900 pr-3"></i>
-            <i class="fa-solid fa-trash text-red-500 hover:text-red-900"></i>
-          </div>
-        </div>
-        <!-- Event Info -->
-        <div class="flex flex-col md:flex-row mt-10">
-          <img src="assets/book.jpg" alt="'Trade is War' by Yash Tandon" class="rounded-xl shadow-lg">
-          <div class="flex grow flex-col justify-center space-y-10 mt-12 md:mt-0 md:ml-12">
-            <p class="serif text-2xl"><strong>Host</strong>: Jacob Roder</p>
-            <p class="serif text-2xl"><strong>Date & Time</strong>: 02/08/23, 4:30-5:30 PM</p>
-            <p class="serif text-2xl"><strong>Location</strong>: CHHS 380</p>
+
+          <!-- Event Info -->
+          <div class="flex flex-col md:flex-row mt-10 bg-slate-200 md:border-2 border-slate-300 shadow-lg py-8 md:p-5 md:rounded-xl ">
+            <!-- Image -->
+            <img src="<%= event.image %>" alt="<%= event.title %> Image" class="md:rounded-xl shadow-lg border-slate-300 bg-slate-200">
+
+            <!-- Event Text -->
+            <div class="grow flex flex-col justify-center space-y-10 mt-12 md:mt-0 md:ml-12 bg-slate-200 rounded-xl">
+              <p class="serif text-2xl"><strong>Host: </strong><%= event.host %></p>
+              <p class="serif text-2xl"><strong>Details: </strong><%= event.details %></p>
+              <p class="serif text-2xl"><strong>Location: </strong><%= event.location %></p>
+              <p class="serif text-2xl"><strong>Start Time: </strong><%= event.startTime %></p>
+              <p class="serif text-2xl"><strong>End Time: </strong><%= event.endTime %></p>
+            </div>
           </div>
         </div>
       </div>
-      
     </main>
 
     <%- include('../partials/footer.ejs') %>
