--- a/part2/views/partials/header.ejs
+++ b/part2/views/partials/header.ejs
@@ -4,31 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage</title>
+  <title></title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/bf9003b136.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Unbounded&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
-<body class="bg-light h-full">
-  <div class="min-h-full">
+<body class="bg-light h-screen">
+  <div class="flex flex-col min-h-full">
 
     <!-- Header -->
     <header class="bg-tan shadow-xl"> 
       <!-- Navigation -->
-      <nav class="md:mx-4">
+      <nav>
         <!-- Top Navigation -->
-        <div class="border-b-2 border-purple-300 md:mr-5 shadow-lg">
+        <div class="border-b-2 border-purple-300 shadow-lg">
           <div class="flex h-16 items-center justify-between">
             
             <!-- Logo -->
             <div class="flex items-center">
-              <div class="flex-shrink-0 ml-3 md:ml-5">
+              <div class="flex-shrink-0 ml-5">
                 <a href="/" class="flex">
-                  <img class="w-8" src="/images/logo.png" alt="Lets Read!"> 
-                  <h1 class="flex items-center text-purple-300 ml-2 text-2xl">LR</h1> 
+                  <img class="logo" src="/images/logo.png" alt="Lets Read!"> 
                 </a>
               </div>
             </div>      
@@ -37,13 +37,13 @@
             <div class="hidden md:flex md:mr-5">
               <ul class="flex">
                 <li class="mr-10">
-                  <a href="/events/new" class="text-slate-50 text-xl hover:text-sky-300">New Event</a>
+                  <a href="/events/new" class="text-white text-xl hover:text-sky-300">New Event</a>
                 </li>
                 <li class="mr-10">
-                  <a href="#" class="text-slate-50 text-xl hover:text-sky-300">Sign Up</a>
+                  <a href="#" class="text-white text-xl hover:text-sky-300">Sign Up</a>
                 </li>
-                <li>
-                  <a href="#" class="text-slate-50 text-xl hover:text-sky-300">Login</a>
+                <li class="mr-10">
+                  <a href="#" class="text-white text-xl hover:text-sky-300">Login</a>
                 </li>
               </ul>   
             </div>
@@ -51,10 +51,10 @@
             <!-- Mobile Navigation Button -->
             <div class="flex md:hidden mr-5">
               <button class="nav-button" id="navOpen">
-                <i class="fa-solid fa-bars text-purple-300"></i>
+                <i class="fa-solid fa-bars text-purple-300 fa-xl"></i>
               </button>
               <button class="nav-button" id="navClose">
-                <i class="fa-solid fa-xmark text-purple-300"></i>
+                <i class="fa-solid fa-xmark text-purple-300 fa-xl"></i>
               </button>
             </div>
           </div>
@@ -63,13 +63,13 @@
           <div class="flex ml-3 mb-4" id="mobileNav"> 
             <ul class="flex flex-col">
               <li>
-                <a href="/events/new" class="text-slate-50 text-lg">New Event</a>
+                <a href="/events/new" class="text-white text-lg">New Event</a>
               </li>
               <li>
-                <a class="text-slate-50 text-lg">Sign Up</a>
+                <a class="text-white text-lg">Sign Up</a>
               </li>
               <li>
-                <a class="text-slate-50 text-lg">Login</a>
+                <a class="text-white text-lg">Login</a>
               </li>
             </ul>
           </div>
@@ -78,7 +78,7 @@
         <!-- Site Navigation -->
         <div class="flex justify-center py-3">
           <a href="/events/">
-            <h1 class="text-slate-50 hover:text-sky-300 text-2xl">Events</h1>
+            <h1 class="text-white hover:text-sky-300 text-2xl">Events</h1>
           </a>
         </div>
       </nav>
